--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,8 @@ Description: What the package does (one paragraph).
 License: What license it uses
 Encoding: UTF-8
 LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 6.1.0
+Imports: 
+    osmdata,
+    magrittr
