--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Authors@R:
     person(given = "Alan",
            family = "Pearse",
            role = c("aut", "cre"),
-           email = "first.last@example.com")
+           email = "apearse9 'at' gmail 'dot' com")
 Description: Estimates walkability using data from OpenStreetMap and other free sources.
 License: MIT + file LICENSE
 Encoding: UTF-8
@@ -25,6 +25,7 @@ Imports:
     magrittr,
     dodgr,
     sf,
+    sp,
     leaflet
 Suggests: 
     knitr,
